# Problemologist-AI

./: .AGENTS.md.swp  .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  ENVIRONMENT_SCOPE.md  GEMINI.md  Gemini-AI for Mechanical Engineering Design.md  MUJOCO_LOG.TXT  Makefile  Podmanfile.sandbox  README.md  agent-pipeline-debugging-workflow.skill  alembic.ini  all_failures_feb_22.md  architectural_review.md  check_gs.py  check_joints.py  controller_openapi.json  debug_session.py  debug_single_simulation.py  debug_worker.py  docker-compose.langfuse.dev.yml  docker-compose.langfuse.yml  docker-compose.railway.yml  docker-compose.test.no-vol.yaml  docker-compose.test.no-volumes.yaml  docker-compose.test.tmpfs.yaml  docker-compose.test.yaml  docker-compose.yml  drift_report.md  events.jsonl  file-description.md  fix_indent.py  inspect_db.py  main.py  (+48 more)
.jules/: bolt.md
controller/: Dockerfile  prompts.py  pyproject.toml  reproduce_langfuse_error.py  temporal_worker.py
controller/activities/: execution.py  preview.py  simulation.py
controller/agent/: benchmark_graph.py  benchmark_handover_validation.py  bootstrap.py  cli_backend.py  config.py  context_usage.py  dspy_utils.py  execution_limits.py  graph.py  handover_constants.py  initialization.py  mock_llm.py  mock_scenarios.py  node_entry_validation.py  prompt_manager.py  react_runtime.py  render_validation.py  review_handover.py  reward.py  run.py  runtime_models.py  signatures.py  state.py  tools.py
controller/agent/benchmark/: __init__.py  data_loader.py  graph.py  models.py  nodes.py  render_seed.py  state.py  storage.py  tools.py
controller/agent/nodes/: __init__.py  architect.py  base.py  benchmark_coder.py  benchmark_plan_reviewer.py  benchmark_planner.py  coder.py  compressor.py  cots_search.py  critic.py  documentation.py  dof_guard.py  electronics_engineer.py  electronics_planner.py  electronics_reviewer.py  engineer.py  execution_reviewer.py  plan_reviewer.py  planner.py  reviewer.py  sidecar.py  skills.py  summarizer.py
controller/agent/provider_tool_call_adapters/: __init__.py  base.py  minimax_adapter.py  native_adapter.py
controller/api/: benchmark_tasks.py  main.py  manager.py  ops.py  request_models.py  schemas.py  tasks.py
controller/api/routes/: benchmark.py  cots.py  datasets.py  episodes.py  script_tools.py  simulation.py  skills.py  steerability.py  worker.py
controller/cli/: benchmark.py
controller/clients/: backend.py  worker.py  worker_ws.py
controller/config/: settings.py
controller/evals/: runner.py
controller/graph/: agent.py  steerability_node.py
controller/middleware/: remote_fs.py
controller/migrations/: env.py
controller/migrations/versions/: 03eb8b34be68_add_glb_to_assettype_enum.py  1f2e4b9c7a11_add_user_session_id_to_episodes.py  2b7c4d8e9f20_add_trace_child_id_columns.py  48d873cc29de_add_dataset_row_archive_episode_type_enum.py  4def9501dde7_merge_heads_for_integration_runner.py  5b673a27de1b_initial_benchmark_models.py  6a5fb04a4024_align_traces_schema.py  75ee4a14d32b_add_waiting_user_to_episodestatus_enum.py  (+10 more)
controller/observability/: broadcast.py  database.py  langfuse.py  middleware_helper.py  tracing.py
controller/persistence/: db.py  models.py  steering_memory.py
controller/tools/: fs.py
controller/utils/: __init__.py  git.py  identity.py  integration.py
controller/workflows/: execution.py  heavy.py  preview.py  simulation.py
shared/: cad_utils.py  circuit_builder.py  current_role.py  enums.py  eval_artifacts.py  git_utils.py  logging.py  pyproject.toml  pyspice_utils.py  schematic_utils.py  script_contracts.py  wire_utils.py
shared/agent_templates/: README.md  __init__.py
shared/agents/: __init__.py  config.py
shared/backend/: protocol.py  utils.py
shared/cli/: benchmark.py
shared/config/: simulation.py
shared/cots/: agent.py  base.py  indexer.py  models.py  providers.py  runtime.py
shared/models/: __init__.py  observability.py  schemas.py  simulation.py  steerability.py
shared/observability/: events.py  logging.py  persistence.py  schemas.py  storage.py  tracing.py
shared/ops/: backup.py  workflows.py
shared/rendering/: __init__.py  headless.py  preview_scene.py  renderer_client.py  simulation_video.py  stress_heatmap.py
shared/runtime/: __init__.py  headless.py
shared/simulation/: __init__.py  backends.py  scene_builder.py  schemas.py  smoke_mode.py  view_utils.py
shared/skills/: __init__.py  catalog.py
shared/utils/: evaluation.py  fasteners.py
shared/workers/: benchmark_definition_template.py  bundling.py  loader.py  markdown_validator.py  objectives_template.py  persistence.py  schema.py  validation_artifacts.py  verify_dependencies.py  workbench_models.py
worker/: Dockerfile  app.py  config.py  objectives_template.py  pyproject.toml  verify_dependencies.py
worker/activities/: heavy_tasks.py  rendering.py
worker/agent_files/: script.py
worker/api/: routes.py  schema.py
worker/filesystem/: __init__.py  backend.py  db.py  router.py  watchdog.py
worker/runtime/: executor.py
worker/simulation/: builder.py  electronics.py  evaluator.py  factory.py  genesis_backend.py  interface.py  loop.py  metrics.py  mujoco_backend.py  randomization.py  renderer.py  task_runner.py  verification.py
worker/skills/: __init__.py  sync.py
worker/tools/: topology.py
worker/utils/: __init__.py  assets.py  cad.py  constraints.py  dfm.py  docs.py  electronics.py  file_validation.py  filesystem.py  git.py  handover.py  loader.py  markdown_validator.py  mesh_utils.py  persistence.py  preview.py  rendering.py  storage.py  validation.py
worker/workbenches/: __init__.py  analysis_utils.py  base.py  cnc.py  config.py  injection_molding.py  manufacturing_config.yaml  models.py  print_3d.py
worker_renderer/: Dockerfile  __init__.py  app.py  pyproject.toml
worker_renderer/api/: __init__.py  routes.py
worker_renderer/utils/: __init__.py  build123d_rendering.py  file_validation.py  rendering.py  scene_builder.py  technical_drawing.py  workbench_config.py
(+4561 files in other folders)
