[project]
name = "problemologist-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "bd_warehouse",
    "build123d>=0.10.0",
    "fastapi>=0.128.5",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.8",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary]>=3.3.2",
    "langfuse>=3.14.1",
    "mujoco>=3.4.0",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.54.0",
    "streamlit-autorefresh>=1.0.1",
    "trimesh[easy]>=4.11.1",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "deepagents>=0.3.12",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "s3fs>=2026.1.0",
    "temporalio>=1.22.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42",
    "ffmpeg-python>=0.2.0",
    "scipy>=1.17.0",
    "beartype>=0.22.9",
    "watchdog>=6.0.0",
    "gitpython>=3.1.46",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.53.0",
    "playwright>=1.58.0",
    "pyrefly>=0.52.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.0",
    "schemathesis>=4.10.0",
    "spec-kitty-cli>=0.14.2",
    "moto[s3]>=5.1.21",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET", "ARG", "PTH", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "controller", "worker", "shared"]
addopts = "-m 'not (integration or integration_p0 or integration_p1 or integration_p2)'"
filterwarnings = [
    "ignore::DeprecationWarning:ezdxf.queryparser",
    "ignore::DeprecationWarning:build123d.objects_curve",
    "ignore::DeprecationWarning:multiprocessing.popen_fork",
]
markers = [
    "integration: marks tests as integration tests (may use real LLM)",
    "integration_p0: PR gate integration tests",
    "integration_p1: Nightly integration tests",
    "integration_p2: Weekly/manual integration tests",
    "benchmark: marks tests related to the benchmark generator",
]
