[project]
name = "problemologist-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "alembic>=1.18.4",
    "bd_warehouse",
    "build123d>=0.10.0",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.12",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary]>=3.3.2",
    "langfuse>=3.14.1",
    "mujoco>=3.5.0",
    "numpy>=1.24,<2.2",
    "pillow<12.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "trimesh[easy]>=4.11.2",
    "typer>=0.23.1",
    "uvicorn>=0.40.0",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "s3fs>=2026.2.0",
    "temporalio>=1.22.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.49",
    "ffmpeg-python>=0.2.0",
    "scipy>=1.17.0",
    "beartype>=0.22.9",
    "watchdog>=6.0.0",
    "gitpython>=3.1.46",
    "python-multipart>=0.0.22",
    "pyspice>=1.5",
    "torch>=2.10.0",
    "genesis-world>=0.3.14",
    "gmsh>=4.15.0",
    "numba>=0.61.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.54.0",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
    "pyrefly>=0.52.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.1",
    "schemathesis>=4.10.1",
    "spec-kitty-cli>=0.15.3",
    "moto[s3]>=5.1.21",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET", "ARG", "PTH", "RUF"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# keep it paralel. no point in disabling globally.
# set to -n0 in integration tests though!
addopts = "-n4 -m 'not (integration or integration_p0 or integration_p1 or integration_p2)'"
filterwarnings = [
    "ignore::DeprecationWarning:ezdxf.queryparser",
    "ignore::DeprecationWarning:build123d.objects_curve",
    "ignore::DeprecationWarning:multiprocessing.popen_fork",
]
markers = [
    "integration: marks tests as integration tests (may use real LLM)",
    "integration_p0: PR gate integration tests",
    "integration_p1: Nightly integration tests",
    "integration_p2: Weekly/manual integration tests",
    "benchmark: marks tests related to the benchmark generator",
    "e2e: end-to-end frontend tests",
]

[tool.uv.sources]
pyspice = { git = "https://github.com/FabriceSalvaire/PySpice" }
