[project]
name = "worker"
version = "0.1.0"
description = "Worker for Problemologist AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "mujoco>=3.4.0",
    "numpy>=2.4.2",
    "pyvista>=0.46.5",
    "trimesh[easy]>=4.11.1",
    "uvicorn>=0.40.0",
    "s3fs>=2026.2.0",
    "ffmpeg-python>=0.2.0",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
