[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "problemologist-worker-renderer"
version = "0.1.0"
description = "Dedicated renderer service for Problemologist-AI"
requires-python = "~=3.12.0"
dependencies = [
    "beartype>=0.22.9",
    "boto3>=1.42.49",
    "build123d",
    "fastapi[standard]>=0.129.0",
    "gitpython>=3.1.46",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy>=2,<3",
    "opencv-python-headless>=4.13.0.92",
    "pillow<12.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
    "trimesh[easy]>=4.11.2",
    "vtk==9.4.2",
]

[tool.uv.sources]
# The renderer owns the novtk build123d line so the heavy worker can stay on the
# legacy CAD stack while the renderer moves to EGL-capable VTK.
build123d = { git = "https://github.com/gumyr/build123d.git", branch = "dev" }
